gobmkida/g2/find_cap2
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/find_cap2/src/engine/reading.c:3606:8: error: use of undeclared identifier 'CSWTCH_588'
return CSWTCH_588[defense]; 
       ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/find_cap2/src/obj/1/reading.o] Error 1
